@@ -1,14 +1,26 @@
 package com.gocaspi.taskfly.taskcollection;
 
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.gocaspi.taskfly.task.Task;
 
+import com.google.gson.*;
 import org.bson.types.ObjectId;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.InjectMocks;
 import org.mockito.Mockito;
 
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
+import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.data.mongodb.core.MongoTemplate;
+import org.springframework.format.annotation.DateTimeFormat;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 
 import org.springframework.messaging.Message;
@@ -17,7 +29,16 @@ import org.springframework.messaging.simp.stomp.StompHeaderAccessor;
 import org.springframework.messaging.support.MessageBuilder;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.web.client.HttpClientErrorException;
+
+import static org.hamcrest.Matchers.containsString;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+
+import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 
 
@@ -25,294 +46,110 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.*;
 
 
+import java.lang.reflect.Type;
+import java.time.Instant;
 import java.time.LocalDateTime;
+import java.time.ZoneId;
+import java.time.format.DateTimeFormatter;
 import java.util.*;
+@SpringBootTest
+@AutoConfigureMockMvc
 class TaskCollectionControllerTest {
-
+    @Autowired
+    private MockMvc mockMvc;
+    @Autowired
+    MongoTemplate mongoTemplate;
     private final HttpClientErrorException httpNotFoundError = HttpClientErrorException.create(HttpStatus.NOT_FOUND, "not found", new HttpHeaders(), "".getBytes(),null);
     LocalDateTime mockTime = LocalDateTime.now();
-
-
-    TaskCollectionService mockService = mock(TaskCollectionService.class);
-    final private String mockTCID = "1234";
+    final private String mockTCID = new ObjectId().toHexString();
     final private String mockTCName = "TaskCollection1";
     final private String mockTCTeamID = new ObjectId().toHexString();
     final private String mockTCOwnerID = new ObjectId().toHexString();
-
     final private List<String> mockTeamMember = Arrays.asList("123", "456", "789");
-    final private TaskCollection mockTC = new TaskCollection(mockTCID, mockTCName, mockTCTeamID, mockTCOwnerID, mockTeamMember);
-    final private String mockUserIds = "1";
-    final private String mockListId = "1";
-
-    final private String mockTeam = "team1";
-
-    final private String mockDeadline = "11-11-2022";
     final private List<String> mockMember = Arrays.asList("123", "456", "789");
 
-    final private String mockObjectId = new ObjectId().toHexString();
+    private TaskCollection mockTC = new TaskCollection(mockTCID, mockTCName, mockTCTeamID, mockTCOwnerID, mockMember);
     final private Task.Taskbody mockBody = new Task.Taskbody("mockTopic", true, "mockDescription");
+    final private String mockTaskID = new ObjectId().toHexString();
+    final private Task mockTask = new Task(mockTCOwnerID, mockTCID, mockTCTeamID, mockTime, mockTaskID, mockBody);
 
+    @BeforeEach
+    void beforeEach(){
+
+        mongoTemplate.dropCollection("taskCollection");
+    }
 
     @Test
-    void createNewTaskCollection() {
-        TaskCollectionController t = new TaskCollectionController(mockService);
-        TaskCollection taskCollection = new TaskCollection(this.mockTCID, this.mockTCName, this.mockTCTeamID, this.mockTCOwnerID, this.mockTeamMember);
-
+    void TestCreateTaskCollectionEndpoint() throws Exception{
+        mongoTemplate.dropCollection("taskCollection");
+        var taskCollectionRequest = new Gson().toJson(mockTC);
+        TaskCollection emptyTaskCollection = new TaskCollection(new ObjectId().toHexString(), "", mockTCTeamID, mockTCOwnerID, mockTeamMember);
+        var emptyTaskCollectionRequest = new Gson().toJson(emptyTaskCollection);
         class Testcase {
-            final TaskCollection mockTaskCollection;
+            final String mockRequestBody;
+            final String mockResponseBody;
+            final Integer statusCode;
 
-            public Testcase(TaskCollection taskCollection) {
-                this.mockTaskCollection = taskCollection;
+            public Testcase(String mockRequestBody, String mockResponseBody, Integer statusCode){
+                this.mockRequestBody = mockRequestBody;
+                this.mockResponseBody = mockResponseBody;
+                this.statusCode = statusCode;
             }
         }
-
         Testcase[] testcases = new Testcase[]{
-                new Testcase(taskCollection)
+                new Testcase(taskCollectionRequest, taskCollectionRequest, HttpStatus.CREATED.value()),
+                new Testcase(emptyTaskCollectionRequest, "", HttpStatus.BAD_REQUEST.value())
         };
-        for (Testcase tc : testcases) {
-            when(mockService.createTaskCollection(tc.mockTaskCollection)).thenReturn(tc.mockTaskCollection);
 
-
-            try {
-                ResponseEntity<TaskCollection> expected = new ResponseEntity<>(tc.mockTaskCollection, HttpStatus.CREATED);
-                ResponseEntity<TaskCollection> actual1 = t.createTaskCollectionEndpoint(tc.mockTaskCollection);
-                assertEquals(actual1.getStatusCode(), expected.getStatusCode());
-            } catch (HttpClientErrorException e) {
-                HttpClientErrorException expectedException = HttpClientErrorException.create(HttpStatus.NOT_FOUND, "bad payload", null, null, null);
-                assertEquals(e.getClass(), expectedException.getClass());
-            }
+        for(Testcase tc: testcases){
+            mockMvc.perform(post("/tc")
+                            .contentType(MediaType.APPLICATION_JSON)
+                            .content(tc.mockRequestBody))
+                    .andExpect(status().is(tc.statusCode))
+                    .andExpect(content().string(tc.mockResponseBody));
         }
 
     }
     @Test
-    void getTaskCollectionByOwnerID() {
-        TaskCollectionController t = new TaskCollectionController(mockService);
-        Task task = new Task(mockUserIds, mockListId, mockTeam, mockTime, mockObjectId, mockBody);
-        List<Task> taskList = Arrays.asList(task);
-        TaskCollectionGetQuery getQuery = new TaskCollectionGetQuery(mockTCName, mockTCTeamID, mockTCID, mockTCOwnerID, taskList, mockMember);
-        List<TaskCollectionGetQuery> getQueries = Arrays.asList(getQuery);
+    void TestGetTaskCollectionsByOwnerID() throws Exception{
+        TaskCollectionGetQuery workingTaskCollection = new TaskCollectionGetQuery(mockTC);
+        List<Task> mockTaskList = List.of(mockTask);
+        workingTaskCollection.setTasks(mockTaskList);
+        List<TaskCollectionGetQuery> taskCollectionGetQueryList = List.of(workingTaskCollection);
+        mongoTemplate.save(mockTask, "task");
+        mongoTemplate.save(mockTC, "taskCollection");
 
         class Testcase {
-            final List<TaskCollectionGetQuery> mockTaskCollection;
-            final String mockUserID;
-            final Boolean notFound;
+            final String tcID;
+            final String responseBody;
+            final Integer statusCode;
 
-            public Testcase(List<TaskCollectionGetQuery> taskCollection, String mockUserID, Boolean notFound) {
-                this.mockTaskCollection = taskCollection;
-                this.mockUserID = mockUserID;
-                this.notFound = notFound;
+            Testcase(String tcID, String responseBody, Integer statusCode){
+                this.tcID = tcID;
+                this.responseBody = responseBody;
+                this.statusCode = statusCode;
             }
         }
-
+        ObjectMapper objectMapper = new ObjectMapper();
+        objectMapper.findAndRegisterModules();
         Testcase[] testcases = new Testcase[]{
-                new Testcase(getQueries, mockUserIds, false),
-                new Testcase(getQueries, mockUserIds, true)
+                new Testcase(mockTCOwnerID, objectMapper.writeValueAsString(taskCollectionGetQueryList), HttpStatus.OK.value()),
+                new Testcase(new ObjectId().toHexString(), "", HttpStatus.NOT_FOUND.value())
         };
-        for (Testcase tc : testcases) {
-            if (tc.notFound) {
-                when(mockService.getTaskCollectionsByOwnerID(tc.mockUserID)).thenThrow(httpNotFoundError);
+
+        for (Testcase tc: testcases){
+            if(tc.statusCode > 299){
+                mockMvc.perform(get("/tc/owner/" + tc.tcID))
+                        .andExpect(status().is(tc.statusCode));
             } else {
-                when(mockService.getTaskCollectionsByOwnerID(tc.mockUserID)).thenReturn(tc.mockTaskCollection);
+                mockMvc.perform(get("/tc/owner/" + tc.tcID))
+                        .andExpect(content().string(tc.responseBody))
+                        .andExpect(status().is(tc.statusCode));
             }
-
-            try {
-                ResponseEntity<List<TaskCollectionGetQuery>> expected = new ResponseEntity<>(HttpStatus.OK);
-                ResponseEntity<List<TaskCollectionGetQuery>> actual1 = t.getTaskCollectionsByOwnerID(tc.mockUserID);
-                assertEquals(actual1.getStatusCode(), expected.getStatusCode());
-            } catch (HttpClientErrorException e) {
-                HttpClientErrorException expectedException = HttpClientErrorException.create(HttpStatus.NOT_FOUND, "bad payload", null, null, null);
-                assertEquals(e.getClass(), expectedException.getClass());
-            }
-        }
-
-    }
-
-    @Test
-    void getTaskCollectionByUserID() {
-        TaskCollectionController t = new TaskCollectionController(mockService);
-        Task task = new Task(mockUserIds, mockListId, mockTeam, mockTime, mockObjectId, mockBody);
-        List<Task> taskList = Arrays.asList(task);
-        TaskCollectionGetQuery getQuery = new TaskCollectionGetQuery(mockTCName, mockTCTeamID, mockTCID, mockTCOwnerID, taskList, mockMember);
-        List<TaskCollectionGetQuery> getQueries = Arrays.asList(getQuery);
-
-        class Testcase {
-            final List<TaskCollectionGetQuery> mockTaskCollection;
-            final String mockUserID;
-            final Boolean notFound;
-
-            public Testcase(List<TaskCollectionGetQuery> taskCollection, String mockUserID, Boolean notFound) {
-                this.mockTaskCollection = taskCollection;
-                this.mockUserID = mockUserID;
-                this.notFound = notFound;
-            }
-        }
-
-        Testcase[] testcases = new Testcase[]{
-                new Testcase(getQueries, mockUserIds, false),
-                new Testcase(getQueries, mockUserIds, true)
-        };
-        for (Testcase tc : testcases) {
-            if (tc.notFound) {
-                when(mockService.getTaskCollectionsByUserID(tc.mockUserID)).thenThrow(httpNotFoundError);
-            } else {
-                when(mockService.getTaskCollectionsByUserID(tc.mockUserID)).thenReturn(tc.mockTaskCollection);
-            }
-
-            try {
-                ResponseEntity<List<TaskCollectionGetQuery>> expected = new ResponseEntity<>(HttpStatus.OK);
-                ResponseEntity<List<TaskCollectionGetQuery>> actual1 = t.getTaskCollectionByUserID(tc.mockUserID);
-                assertEquals(actual1.getStatusCode(), expected.getStatusCode());
-            } catch (HttpClientErrorException e) {
-                HttpClientErrorException expectedException = HttpClientErrorException.create(HttpStatus.NOT_FOUND, "bad payload", null, null, null);
-                assertEquals(e.getClass(), expectedException.getClass());
-            }
-        }
-
-    }
-    @Test
-    void getTaskCollectionsByTeamID() {
-        TaskCollectionController t = new TaskCollectionController(mockService);
-        Task task = new Task(mockUserIds, mockListId, mockTeam, mockTime, mockObjectId, mockBody);
-        List<Task> taskList = Arrays.asList(task);
-        TaskCollectionGetQuery getQuery = new TaskCollectionGetQuery(mockTCName, mockTCTeamID, mockTCID, mockTCOwnerID, taskList, mockMember);
-        List<TaskCollectionGetQuery> getQueries = Arrays.asList(getQuery);
-
-        class Testcase {
-            final List<TaskCollectionGetQuery> mockTaskCollection;
-            final String mockTeamID;
-            final Boolean notFound;
-
-            public Testcase(List<TaskCollectionGetQuery> taskCollection, String mockTeamID, Boolean notFound) {
-                this.mockTaskCollection = taskCollection;
-                this.mockTeamID = mockTeamID;
-                this.notFound = notFound;
-            }
-        }
-
-        Testcase[] testcases = new Testcase[]{
-                new Testcase(getQueries, mockUserIds, false),
-                new Testcase(getQueries, mockUserIds, true)
-        };
-        for (Testcase tc : testcases) {
-            if (tc.notFound) {
-                when(mockService.getTaskCollectionByTeamID(tc.mockTeamID)).thenThrow(httpNotFoundError);
-            } else {
-                when(mockService.getTaskCollectionByTeamID(tc.mockTeamID)).thenReturn(tc.mockTaskCollection);
-            }
-
-            try {
-                ResponseEntity<List<TaskCollectionGetQuery>> expected = new ResponseEntity<>(HttpStatus.OK);
-                ResponseEntity<List<TaskCollectionGetQuery>> actual1 = t.getTaskCollectionsByTeamID(tc.mockTeamID);
-                assertEquals(actual1.getStatusCode(), expected.getStatusCode());
-            } catch (HttpClientErrorException e) {
-                HttpClientErrorException expectedException = HttpClientErrorException.create(HttpStatus.NOT_FOUND, "bad payload", null, null, null);
-                assertEquals(e.getClass(), expectedException.getClass());
-            }
-        }
-
-    }
-    @Test
-    void getTaskCollectionsByID() {
-        TaskCollectionController t = new TaskCollectionController(mockService);
-        Task task = new Task(mockUserIds, mockListId, mockTeam, mockTime, mockObjectId, mockBody);
-        List<Task> taskList = Arrays.asList(task);
-        TaskCollectionGetQuery getQuery = new TaskCollectionGetQuery(mockTCName, mockTCTeamID, mockTCID, mockTCOwnerID, taskList, mockMember);
-
-        class Testcase {
-            final TaskCollectionGetQuery mockTaskCollection;
-            final String mockID;
-            final Boolean notFound;
-
-            public Testcase(TaskCollectionGetQuery taskCollection, String mockID, Boolean notFound) {
-                this.mockTaskCollection = taskCollection;
-                this.mockID = mockID;
-                this.notFound = notFound;
-            }
-        }
-
-        Testcase[] testcases = new Testcase[]{
-                new Testcase(getQuery, mockUserIds, false),
-                new Testcase(getQuery, mockUserIds, true)
-        };
-        for (Testcase tc : testcases) {
-            if (tc.notFound) {
-                when(mockService.getTaskCollectionByID(tc.mockID)).thenThrow(httpNotFoundError);
-            } else {
-                when(mockService.getTaskCollectionByID(tc.mockID)).thenReturn(tc.mockTaskCollection);
-            }
-
-            try {
-                ResponseEntity<TaskCollectionGetQuery> expected = new ResponseEntity<>(HttpStatus.OK);
-                ResponseEntity<TaskCollectionGetQuery> actual1 = t.getTaskCollectionByID(tc.mockID);
-                assertEquals(actual1.getStatusCode(), expected.getStatusCode());
-            } catch (HttpClientErrorException e) {
-                HttpClientErrorException expectedException = HttpClientErrorException.create(HttpStatus.NOT_FOUND, "bad payload", null, null, null);
-                assertEquals(e.getClass(), expectedException.getClass());
-            }
-        }
-
-    }
-    @Test
-    void deleteTaskCollection() {
-        TaskCollectionController t = new TaskCollectionController(mockService);
-        class Testcase {
-            final String mockID;
-
-            public Testcase(String mockID) {
-                this.mockID = mockID;
-            }
-        }
-
-        Testcase[] testcases = new Testcase[]{
-                new Testcase(mockUserIds),
-        };
-        for (Testcase tc : testcases) {
-            ResponseEntity<String> actual = t.deleteTaskCollectionByID(tc.mockID);
-            assertEquals(HttpStatus.ACCEPTED, actual.getStatusCode());
-            Mockito.verify(mockService, times(1)).deleteTaskCollectionByID(tc.mockID);
 
         }
 
-    }
-    @Test
-    void updateTaskCollection() {
-        TaskCollectionController t = new TaskCollectionController(mockService);
-        class Testcase {
-            final String mockID;
-            final TaskCollection taskCollection;
 
-            public Testcase(String mockID, TaskCollection taskCollection) {
-                this.mockID = mockID;
-                this.taskCollection = taskCollection;
-            }
-        }
-
-        Testcase[] testcases = new Testcase[]{
-                new Testcase(mockUserIds, mockTC),
-        };
-        for (Testcase tc : testcases) {
-            ResponseEntity<TaskCollection> actual = t.patchTaskCollectionByID(tc.mockID, tc.taskCollection);
-            assertEquals(HttpStatus.ACCEPTED, actual.getStatusCode());
-            Mockito.verify(mockService, times(1)).updateTaskCollectionByID(tc.mockID, tc.taskCollection);
-
-        }
-
-    }
-
-    @Test
-    void sendTaskCollectionMessageTest(){
-        String testMessage = "Test123";
-        TaskCollectionController t = new TaskCollectionController(mockService);
-        String actual = t.sendTaskCollectionMessage(createMessage("123", testMessage));
-        assertEquals(testMessage, actual);
-    }
-
-    Message<String> createMessage(String collectionID, String payload){
-        StompHeaderAccessor fakeSubscriptionHeader = StompHeaderAccessor.create(StompCommand.SEND);
-        fakeSubscriptionHeader.setHeader("simpDestination", "/collection/" + collectionID);
-        MessageBuilder<String> fakeSubscriptionMessage = MessageBuilder.withPayload(payload);
-        fakeSubscriptionMessage.setHeaders(fakeSubscriptionHeader);
-        return fakeSubscriptionMessage.build();
     }
 
 
